make final changes

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,4 +1,7 @@
-* {
-  margin: 1rem;
-  padding: 0;
+.title {
+  padding-bottom: 5rem;
+}
+
+.form__label {
+  display: flex;
 }/*# sourceMappingURL=styles.css.map */
