--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,21 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+.header__container {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  margin: 2.5rem 1rem;
+}
+
 .title {
   padding-bottom: 5rem;
 }
