--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,5 +1,26 @@
 @use './partials/mixins' as *;
 
+* {
+    margin: 0;
+    padding: 0;
+}
+
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
+}
+
+.header {
+
+    &__container {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        margin: 2.5rem 1rem;
+    }
+}
+
 .title {
     padding-bottom: 5rem;
 }
